chapter 0: add TOC and change bullet color

--- a/0 Network and TCP-IP overview/Chapter_0 Introduction.tex
+++ b/0 Network and TCP-IP overview/Chapter_0 Introduction.tex
@@ -8,15 +8,29 @@
 \usecolortheme{beaver}
 
 \title{Computer Networks Laboratory}
+\subtitle{Chapter 0: Introduction}
 \author{Ahmad Khonsari}
-\institute{\url{http://ece.ut.ac.ir/portal/}}
+\institute{
+    ECE Department\\
+    Tehran University \newline
+    \url{http://ece.ut.ac.ir/portal/}
+}
 \date{Spring 1399}
+\subject{Computer Science}
 
+\setbeamercolor{section number projected}{bg=red,fg=white}
+\setbeamercolor*{item}{fg=red}
 
 \begin{document}
 
 \frame{\titlepage}
 
+\begin{frame}
+    \frametitle{Table of Contents}
+    \tableofcontents
+\end{frame}
+
+\section{Teaching Staff}
 \begin{frame}
 \frametitle{Teaching Staff}
 \begin{itemize}
@@ -37,11 +51,12 @@
 
 \end{frame}
 
+\section{Course Goals}
 \begin{frame}
     \frametitle{Course Goals}
 
     \begin{itemize}
-        \item Learn: how to config host and networking device
+        \item Learn how to config host and networking device
         \item Learn how to network device work
         \item Learn how to simulate network
         \item Learn new network protocol (SNMP, \dots)
@@ -51,6 +66,7 @@
 
 \end{frame}
 
+\section{Course Format}
 \begin{frame}
     \frametitle{Course Format}
 
@@ -63,6 +79,7 @@
 
 \end{frame}
 
+\section{Grading}
 \begin{frame}
     \frametitle{Grading}
 
@@ -85,6 +102,7 @@
 
 \end{frame}
 
+\section{Course Materials}
 \begin{frame}
     \frametitle{Course Materials}
 
@@ -99,6 +117,7 @@
 
 \end{frame}
 
+\section{Class rules}
 \begin{frame}
     \frametitle{Class rules}
 
