chapter 0: add 'course background' slide

--- a/0 Network and TCP-IP overview/Chapter_0 Introduction.tex
+++ b/0 Network and TCP-IP overview/Chapter_0 Introduction.tex
@@ -60,9 +60,28 @@
         \item Learn how to network device work
         \item Learn how to simulate network
         \item Learn new network protocol (SNMP, \dots)
-        \item Routing, ARP, RIP, OSPF, UDP, TCP, Multicast, NAT, HTTP, DHCP, SNMP, Security, ...         
+        \item IPv4, IPv6, Routing, ARP, RIP, OSPF, UDP, TCP, Multicast, NAT, HTTP, DHCP, SNMP, Security, ...         
         \item During the study you need to read extra book and documents for do your lab (has not been taught in the Network lesson)
     \end{itemize}
+
+\end{frame}
+
+\section{Course Background}
+\begin{frame}
+    \frametitle{Course Background}
+
+    \begin{itemize}
+        \item Computer Net Lab is a one unit course and it is a follow up of the Computer Networks course.
+        \item The materials you have learned in the computer network course is necessary but not sufficient to do Computer Net Lab.
+              You will learn at least 40\% of networking materials that you didn't see in the main course (such as IPV6, Spanning Tree, Multicast, MPLS) . It is necessary to learn the necessary background before attending each session.
+        \item The grading of this course is divided to 3 main parts.
+        \begin{enumerate}
+            \item Reading the background material of each lab before attending each session. There is a quiz in the beginning of each lab of the main materials of the current session.
+            \item Carrying out the lab within the time slot that assigned for each lab and prepare the report
+            \item A final exam. In the current semester due to Covid 19, we may ask students to voluntarily prepare and fulfil an extra lab instead of exam.
+        \end{enumerate}
+    \end{itemize}
+
 
 \end{frame}
 
@@ -110,8 +129,8 @@
         \item Textbook: TCP/IP Essential, a lab based approach
         \item \url{https://github.com/UT-Network-Lab/TCP-IP-Laboratory}
         \item GNS3 on Linux (physical or virtual machine)
-        \item Cisco router image
-        \item Docker images
+        \item Cisco router image (c3725-adventerprisek9-mz.124-25d.image)
+        \item Docker images (netlab/term, netlab/gui)
         \item GNS3 Portable projects (Figures)
     \end{itemize}
 
@@ -123,7 +142,7 @@
 
     LATE ARRIVAL:
     \begin{itemize}
-        \item below 15 min $\rightarrow$ don’t worry
+        \item below 15 min $\rightarrow$ don’t worry (but you may miss quiz)
         \item {\color{orange} between 15 and 30 min $\rightarrow$ get -0.5 for your session grade}
         \item {\color{red} more than 30 min $\rightarrow$ don’t enter the class}
     \end{itemize}
