chapter 0: update grading

--- a/0 Network and TCP-IP overview/Chapter_0 Introduction.tex
+++ b/0 Network and TCP-IP overview/Chapter_0 Introduction.tex
@@ -105,14 +105,14 @@
     \begin{itemize}
         \item For remote class when COVID-19
         \begin{itemize}
-            \item {\color{red} 1.9} for each lab report
+            \item {\color{red} 1.8} for each lab report
         \end{itemize}
         \item For normal class
         \begin{itemize}
-            \item {\color{red} 1.5} for finishing up the lab
+            \item {\color{red} 1.4} for finishing up the lab
             \item {\color{red} 0.4} for each lab report (1 week)
         \end{itemize}
-        \item {\color{red} 0.1} to {\color{red} 0.2} for each quiz (Additional Score)
+        \item {\color{red} 0.2} to {\color{red} 0.3} for each quiz (0.1 Additional Score)
         \item Don’t submit image, except for report questions that specifically ask for an image.
         \item 
         \item You can only object to your grades within {\color{red} 2 days} of receiving them. We do not consider objections after that. 
