--- a/1 Linux and TCP-IP networking/Linux and TCP-IP networking.tex
+++ b/1 Linux and TCP-IP networking/Linux and TCP-IP networking.tex
@@ -63,7 +63,7 @@
 
 \section{Telnet Service}
     Run \lstinline{ps -e} to list the processes running in \textit{h1}.
-    After starting a new process by running \lstinline{telnet} in another command window, execute \lstinline{ps -e} again in a third window to see if there is any change in its output.
+    After starting a new process by running \lstinline{telnet} in another command window (open new auxiliary console), execute \lstinline{ps -e} again in a third window to see if there is any change in its output.
 
     Find the process id of the \lstinline{telnet} process you started, by:
     \begin{lstlisting}
@@ -124,15 +124,16 @@ more /etc/services
     % fixme: content
     In this exercise, we will use \lstinline{tcpdump} to capture a packet containing the link, IP, and TCP headers and use \lstinline{wireshark} to analyze this packet.
 
-    First, run \lstinline{tcpdump -enx -w dump.out} in \textit{h1}.
-    You will not see any \lstinline{tcpdump} output, since the \lstinline{-w} option is used to write the output to the \path{dump.out} file.
+    First, run \lstinline{tcpdump -enx -w dump.pcap} in \textit{h1}.
+    You will not see any \lstinline{tcpdump} output, since the \lstinline{-w} option is used to write the output to the \path{dump.pcap} file.
 
     Then, you may want to run \lstinline{telnet 128.238.66.102} to generate some TCP traffic.\footnote{Remember to run \lstinline{/etc/init.d/xinetd restart} in \textit{h2} to start telnet server on it.}
     After you login to \textit{h2} (use \textbf{netlab} for username and password), terminate the \lstinline{telnet} session and terminate the \lstinline{tcpdump} program.
-    Next, you will use \lstinline{wireshark} to open the packet trace captured by \lstinline{tcpdump} and analyze the captured packets.
-    To do this, run \lstinline{wireshark dump.out &}.
+    Next, you will use \lstinline{tcpdump} or \lstinline{wireshark} to open the packet trace captured by \lstinline{tcpdump} and analyze the captured packets.
+    To do this, use this command \lstinline{tcpdump -r dump.pcap} to see content of \path{dump.pcap} or see with GUI \lstinline{wireshark dump.pcap &}\footnote{To use \lstinline{wireshark} in isolated \lstinline{docker} space, you need to copy file from  \lstinline{docker} space to your PC}.
     The \lstinline{wireshark} Graphical User Interface (GUI) will pop up and the packets captured by \lstinline{tcpdump} will be displayed.
     Select any one of the packets that contain the link, IP, and TCP headers.
+    In GNS3 you can capture ans see packet with right click on wire and select \textit{Start Capture}.
     
     \begin{report}
     \item What is the value of the \texttt{protocol} field in the IP header of the packet you saved?
@@ -142,10 +143,10 @@ more /etc/services
     \end{report}
 
 \section{\texttt{ARPing}}
-    This time we will run wireshark to capture an ARP request and an ARP reply in real-time. Simply run \lstinline{wireshark &} in \textit{h1} and select the interface and start capturing.
+    This time we will run \lstinline{wireshark} to capture an ARP request and an ARP reply in real-time. Simply run \lstinline{wireshark &} in \textit{h1} and select the interface and start capturing.
     If there is no arp requests and replies in the network, generate some using \lstinline{arping 128.238.66.102} command in the \textit{h1} terminal.
 
-    Now you should see several ARP replies in the arping output.
+    Now you should see several ARP replies in the \lstinline{arping} output.
     
     \begin{report}
     \item What is the value of the \texttt{frame type} field in an Ethernet frame carrying an ARP request and in an Ethernet frame carrying an ARP reply, respectively?
