--- a/2 A single segment network/A single segment network.tex
+++ b/2 A single segment network/A single segment network.tex
@@ -62,14 +62,14 @@
     \end{center}
 
 \section{Network Interfaces}
-    Use the \lstinline{ifconfig -a} command to display information about the network interfaces on your host.
+    Use the \lstinline{ifconfig -a} command to display information about the network interfaces on \textit{h0}.
     Find the IP address and the net mask of your machine.
     
     \begin{report}
     \item How many interfaces does the host have?
     List all the interfaces found, give their names, and explain their functions briefly.
 
-    \item What are the MTUs of the interfaces on your host?
+    \item What are the MTUs of the interfaces on \textit{h0}?
 
     \item Is network subnetted?
     What is the reasoning for your answer? What the experimental are the reasons for subnetting?
@@ -81,7 +81,7 @@
 
     \begin{report}
     \item From the \lstinline{ping} output, is the 127.0.0.1 interface on?
-    Can you see any ICMP message sent from your host in the \lstinline{tcpdump} output?
+    Can you see any ICMP message sent from \textit{h0} in the \lstinline{tcpdump} output?
     Why?
     \end{report}
 
@@ -97,6 +97,7 @@
 
     If you don’t see a significant amount of output packets in the \lstinline{netstat} output, the machine was probably restarted recently. You may do this experiment later, or use the following \lstinline{socket} command to generate some network traffic:
     \begin{lstlisting}[emph={remote-host}]
+# replace remote-host with ip address
 socket -u -i -n200 remote-host echo
     \end{lstlisting}
     
@@ -109,26 +110,26 @@ socket -u -i -n200 remote-host echo
     You need these \textbf{MAC} addresses for the exercises and lab report (as table of host and \textbf{MAC}).
 
 \section{ARP Table}
-    Use \lstinline{arp -a} to see the entire ARP table.
+    Use \lstinline{arp -a} to see the entire ARP table on \textit{h0}.
     Observe that all the IP addresses displayed are on the same subnet.
 
-    If you find that all the remote hosts are in your host’s ARP table, you need to delete a remote host from the table, using:
-    \footnote{If you deleted your host’s IP address from the ARP table by mistake, you must add the entry back in the table. See the \lstinline{arp} manual page to add.
-    Note that, in order for your host to reply to the ARP requests, the ARP entry of your host must have the \lstinline{P} flag in the ARP table.}
+    If you find that all the remote hosts are in \textit{h0}’s ARP table, you need to delete a remote host from the table, using:
+    \footnote{If you deleted \textit{h0}’s IP address from the ARP table by mistake, you must add the entry back in the table. See the \lstinline{arp} manual page to add.
+    Note that, in order for \textit{h0} to reply to the ARP requests, the ARP entry of \textit{h0} must have the \lstinline{P} flag in the ARP table.}
     \begin{lstlisting}[emph={remote-host}]
 arp -d remote-host
     \end{lstlisting}
 
     Save the ARP table for your lab report.
     
-    While \lstinline{tcpdump -en}\footnote{You can add \lstinline{-x} flag to see hex dump.} is running, \lstinline{ping} a remote host that has no entry in your host ARP table.
+    While \lstinline{tcpdump -en}\footnote{You can add \lstinline{-x} flag to see hex dump.} is running, \lstinline{ping} a remote host that has no entry in \textit{h0} ARP table.
     Then terminate the \lstinline{tcpdump} program.
 
     You can run \lstinline{wireshark &} to capture network.
 
     Observe the first few lines of the packet trace to see how ARP is used to resolve an IP address.
 
-    Run \lstinline{arp -a} to see a new line added in your host’s ARP table.
+    Run \lstinline{arp -a} to see a new line added in \textit{h0}’s ARP table.
     Save the new ARP table for your lab report.
 
     Mark the ARP request packet and the ARP reply packet in the \lstinline{wireshark} window.
@@ -161,7 +162,10 @@ arp -d remote-host
     \end{report}
 
 \section{ARP Proxy}
-    The network topology for this proxy ARP exercise is shown in \hyperref[fig:2.9]{Figure~2.9}. The IP addresses and network masks for the hosts are also given in \hyperref[fig:2.9]{Figure~2.9}. Change the IP address and network mask of your host accordingly (see Section~2.3.2 of reference book). Change the IP addresses and network masks of the \textit{Router4} interfaces according to \hyperref[fig:2.9]{Figure~2.9}.
+    The network topology for this proxy ARP exercise is shown in \hyperref[fig:2.9]{Figure~2.9}.
+    The IP addresses and network masks for the hosts are also given in \hyperref[fig:2.9]{Figure~2.9}.
+    Change the IP address and network mask of \textit{h0} accordingly (see Section~2.3.2 of reference book).
+    Change the IP addresses and network masks of the \textit{Router4} interfaces according to \hyperref[fig:2.9]{Figure~2.9}.
 
     \textbf{Note}\quad
     Network mask of the hosts in the 128.238.65.0 network is 255.255.0.0.
@@ -172,16 +176,16 @@ arp -d remote-host
     Set IP of each network by running the following command in the hosts:
     \begin{enumerate}
         \item \lstinline[emph={x}]{ifconfig eth0 x.x.x.x/mask}
-        \item \lstinline[emph={x}]{route add default gw x.x.x.x}
+        \item \lstinline[emph={y}]{route add default gw y.y.y.y}
     \end{enumerate}
     Next we will enable the proxy ARP function on the ethernet1 interface of \textit{Router4}.
     \begin{enumerate}
-        \item \lstinline{telnet} to \textit{Router4}. (Use \lstinline{telnet 128.238.64.4}, or right click on the Router and open console on GNS3.)
+        \item \lstinline{telnet} to \textit{Router4}. (Right click on the Router and open console on GNS3 or use \lstinline{telnet 128.238.64.4}.)
         \item Log in to the router, type \lstinline[language={cisco}]{enable} to enter the \textit{Privileged EXEC} mode.\footnote{We will discuss bridge and router configuration in Chapter~3.}
         \item Enter the \textit{Global Configuration} mode by typing \lstinline[language={cisco}]{config term}.
         \item Then type the following lines for each interfaces:
         \begin{lstlisting}[language={cisco}, escapechar={@}, emph={x}]
-config term
+! config term
     interface f0/0 ! use f0/1 for the other interface@\footnote{The name of the router interfaces may be different for various routers. You can find the names by typing \texttt{write term} in the \textit{Privilege EXEC} mode.}@
         ip addr x.x.x.x 255.255.255.0
         no shut
@@ -203,10 +207,10 @@ socket -i -u -n1 -w1000 host-in-64-0-subnet echo
 
     When you are done with all the hosts in the 128.238.64.0 subnet, save the tcpdump output for the lab report.
 
-    Run \lstinline{arp -a} to display the new ARP table in your host.
+    Run \lstinline{arp -a} to display the new ARP table in \textit{h1}, \textit{h4} and \textit{h5}.
     Save the ARP table for your lab report.
 
-    After the lab instructor restores the network into a single subnet (see \hyperref[fig:1.3]{Figure~1.3}), change the IP address and network mask of your host’s interface back to their default values as in \hyperref[fig:1.3]{Figure~1.3}.
+    % After the lab instructor restores the network into a single subnet (see \hyperref[fig:1.3]{Figure~1.3}), change the IP address and network mask of your host’s interface back to their default values as in \hyperref[fig:1.3]{Figure~1.3}.
 
     \begin{figure}[H]
         \centering
@@ -241,7 +245,7 @@ socket -i -u -n1 -w1000 host-in-64-0-subnet echo
     \item Give one advantage and one disadvantage of using proxy ARP.
     \end{report}
 
-\section{Gratuitous (Unsolicited) ARP}
+\section{** Gratuitous (Unsolicited) ARP}
     While \lstinline{tcpdump -ex} (or run \lstinline{wireshark}) is running on all the hosts, reboot host \textit{h7}. You can send the gratuitous ARP manually by execute:
 
     \begin{lstlisting}[emph={eth0,h7-ip,h6-ip}]
@@ -262,6 +266,8 @@ arping -c 4 -U -I eth0 h7-ip
 
 
 \part{Exercise with ICMP and \texttt{ping}}\label{sec:icmp-ping}
+    The following exercises use the single segment network topology shown in \hyperref[fig:1.3]{Figure~1.3}.
+
 \section{ping ICMP}
     Use \lstinline[emph={remote-host}]{ping -sv remote-host} to test whether the remote host is reachable, while running:
     \\\lstinline[emph={your-host, remote-host}]{tcpdump -enx host your-host and remote-host}.
@@ -299,6 +305,9 @@ socket -i -u -n1 -w1000 remote-host 88888
     We will also set an incorrect subnet mask for hosts and see what are the consequences.
     For the next two exercises, we use only four host from single segment network (\hyperref[fig:1.3]{Figure~1.3}).
 
+\section{Duplicate IP}\label{sec:duplicate-ip}
+    Change the IP address of your hosts as shown in \hyperref[tab:2.3]{Table~2.3}.
+
     \begin{table}[H]
         \caption{Host IP addresses and network masks for \nameref{sec:duplicate-ip} (Table~2.3)}\label{tab:2.3}
         \centering
@@ -313,9 +322,6 @@ socket -i -u -n1 -w1000 remote-host 88888
             \hline \hline
             \end{tabular}
     \end{table}
-
-\section{Duplicate IP}\label{sec:duplicate-ip}
-    Change the IP address of your hosts as shown in \hyperref[tab:2.3]{Table~2.3}.
 
     Delete the entries for all hosts other than your host from ARP table.
 
@@ -340,9 +346,26 @@ socket -i -u -n1 -w1000 remote-host 88888
     Answer the questions for the second and third cases.
     \end{report}
 
+    \newpage
+
 \section{IP Subnets}\label{sec:ip-subnets}
     Change the host IP addresses and the subnet masks as shown in \hyperref[tab:2.4]{Table~2.4}.
     Note that two hosts in each group (\textit{h0} and \textit{h3}) are assigned an incorrect subnet mask.
+
+    \begin{table}[H]
+        \caption{Host IP addresses and network masks for \nameref{sec:ip-subnets} (Table~2.4)}\label{tab:2.4}
+        \centering
+        \begin{tabular}{ c c c }
+            \hline \hline
+            Host & IP Address & \makebox[7.3em][c]{Subnet Mask} \\
+            \hline 
+            h0 & 128.238.66.100 & \makebox[7.3em][l]{255.255.255.240} \\
+            h1 & 128.238.66.101 & \makebox[7.3em][l]{255.255.255.0} \\
+            h2 & 128.238.66.102 & \makebox[7.3em][l]{255.255.255.0} \\
+            h3 & 128.238.66.120 & \makebox[7.3em][l]{255.255.255.240} \\
+            \hline \hline
+            \end{tabular}
+    \end{table}
 
     Capture the packets with \lstinline{tcpdump -e} for the following cases.
 
@@ -361,20 +384,6 @@ socket -i -u -n1 -w1000 remote-host 88888
     
     To avoid confusion, only one machine in each group should generate traffic in each case.
     Clearly, this exercise has to be performed as a team.
-    \begin{table}[H]
-        \caption{Host IP addresses and network masks for \nameref{sec:ip-subnets} (Table~2.4)}\label{tab:2.4}
-        \centering
-        \begin{tabular}{ c c c }
-            \hline \hline
-            Host & IP Address & \makebox[7.3em][c]{Subnet Mask} \\
-            \hline 
-            h0 & 128.238.66.100 & \makebox[7.3em][l]{255.255.255.240} \\
-            h1 & 128.238.66.101 & \makebox[7.3em][l]{255.255.255.0} \\
-            h2 & 128.238.66.102 & \makebox[7.3em][l]{255.255.255.0} \\
-            h3 & 128.238.66.120 & \makebox[7.3em][l]{255.255.255.240} \\
-            \hline \hline
-            \end{tabular}
-    \end{table}
     
     \begin{report}
     \item Explain what happened in each case according to the \lstinline{tcpdump} outputs saved.
