chapter 0: add refrence book link

--- a/0 Network and TCP-IP overview/Chapter_0 Introduction.tex
+++ b/0 Network and TCP-IP overview/Chapter_0 Introduction.tex
@@ -117,7 +117,7 @@
     \frametitle{Course Materials}
 
     \begin{itemize}
-        \item Textbook: TCP/IP Essential, a lab based approach
+        \item Textbook: TCP/IP Essential, a lab based approach (\href{https://github.com/UT-Network-Lab/TCP-IP-Laboratory/blob/master/References/TCP-IP\%20Essentials.pdf}{link})
         \item \url{https://github.com/UT-Network-Lab/TCP-IP-Laboratory}
         \item GNS3 on Linux (physical or virtual machine)
         \begin{itemize}
@@ -158,6 +158,9 @@
         \item \alert{10 min} TA chapter description (or watch recorded videos)\footnote{May you watch it before class to save time for do lab instructions}
         \item \alert{2:30 min} Perform laboratory instructions (with TA hint and help)
         \item Fill and submit your lab report (while do lab instructions)
+        \begin{itemize}
+            \item We use Moodle Quiz to get your report
+        \end{itemize}
     \end{enumerate}
     \begin{alertblock}{Important}
         Don’t accept delay (must submit and finish your work on time even if it is \textbf{incomplete})
