--- a/7 Multicast and realtime service/Multicast and realtime service.tex
+++ b/7 Multicast and realtime service/Multicast and realtime service.tex
@@ -6,7 +6,7 @@
 }
 
 \begin{document}
-\part{Simple Multicast Exercises}
+\part{Simple Multicast Exercises\label{sec:simple-multicast}}
     For all the exercises in this section, the network topology is given in \hyperref[fig:1.3]{Figure~1.3}, where all the hosts are connected to a single network segment using their default IP addresses, i.e.\ from 128.238.66.100 to 128.238.66.107.
     
     \begin{minipage}{0.48\textwidth}
@@ -307,34 +307,61 @@ telnet 128.238.66.100
         \label{fig:7.13}
     \end{figure}
 
+    You can use prepared topology as described in \autoref{sec:simple-multicast}.
+
 \section{Configuring Router}
 \label{sec:config-router}
     Connect the hosts and the route in your group as shown in \hyperref[fig:7.13]{Figure~7.13}. Set the IP address of your host as given in \hyperref[tab:7.2]{Table~7.2}. Note that the IP addresses of the router interfaces are the same as their default IP addresses.
     Login to the router and run \lstinline{ip multicast-routing} to enable multicast routing in the \textit{Global Configuration} mode.
     Then, enable the PIM protocol on each interface, by running \lstinline{ip pim dense-mode} in the \textit{Interface Configuration} mode. Now the router is enabled to do multicast routing using PIM.
 
-    Login to the router, execute \lstinline{show ip igmp interface} and \lstinline{show ip igmp group} in the \textit{Privileged EXEC} mode.
+    \begin{lstlisting}[language=cisco]
+configure terminal
+    ip multicast-routing
+    interface f0/0
+        ip addr 128.238.63.3 255.255.255.0
+        ip pim dense-mode
+        no shutdown
+        exit
+    interface f0/1
+        ip addr 128.238.64.3 255.255.255.0
+        ip pim dense-mode
+        no shutdown
+        exit
+    end
+    \end{lstlisting}
+
+    Login to the router, execute the following commands in the \textit{Privileged EXEC} mode.
+    \begin{lstlisting}[language=cisco]
+show ip igmp interface
+show ip igmp group
+    \end{lstlisting}
     Examine the multicast group memberships currently recorded in the router and the configurations of the router interfaces.
 
 \section{Multicast Message}
     Enable linux multicast routing in all the hosts (see \autoref{sec:linux-multicast-routing}).\\
     Start \lstinline{netspy} on all the hosts, by using:
     \begin{lstlisting}
-./netspy 224.111.111.111 1500
+/home/netlab/code/netspy 224.111.111.111 1500
     \end{lstlisting}
     Start \lstinline{netspy} on \textit{h1}, by using:
     \begin{lstlisting}
-./netspyd 224.111.111.111 1500 16
+/home/netlab/code/netspyd 224.111.111.111 1500 16
     \end{lstlisting}
     
     Login to the router.
     Run \lstinline[language={cisco}]{show ip igmp interface} and \lstinline[language={cisco}]{show ip igmp group} in the \textit{Privileged EXEC} mode again to examine the current membership records.
 
-    Try if you can \lstinline{ping} a host on the other side of the router.
-    Login to \textit{h1} from \textit{h2} in your group, then logout.
+    Try if you can \lstinline{ping} a host on the other side of the router (e.g.\ \lstinline{ping} \textit{h4} from \textit{h1}).
+
+    \lstinline{telnet} from \textit{h2} to \textit{h1} in your group, then logout. (Use \texttt{netlab} as username and password.)
+    \begin{lstlisting}
+telnet 128.238.63.101
+    \end{lstlisting}
     See if the multicast messages sent by \lstinline{netspyd} reach the other side of the router.
 
-    Add \textit{route} for other subnet to your host and try \lstinline{ping} again. Now, login to \textit{h1} from \textit{h2} in your group, then logout.
+    Add \textit{route} for other subnet to your host and try \lstinline{ping} again.
+    Now, login to \textit{h1} from \textit{h2} in your group via \lstinline{telnet}, then logout.
     
     \begin{report}
     \item Can you ping a host on the other side of the router?
@@ -344,14 +371,16 @@ telnet 128.238.66.100
 
 \section{IGMP Types}
     Execute \lstinline{tcpdump ip multicast -v} or \lstinline{wireshark} in one console to capture IGMP messages.
-    When you see three or more IGMP queries in the second \lstinline{tcpdump} output, terminate both \lstinline{tcpdump} programs.
-% FIXME: check senario
+    When you see \textbf{three or more IGMP queries} in the second \lstinline{tcpdump} output, terminate both \lstinline{tcpdump} programs.
+
     Analyze the IGMP messages you captured.
     Print and save two different IGMP messages.
 
     Repeat the above experiment.
     Terminate \lstinline{netspy} on \textit{h2} and \textit{h4}.
     Terminate the \lstinline{tcpdump} programs and analyze the IGMP leave message you captured.
+
+    If you have trouble in getting packets using \lstinline{wireshark}, try \lstinline{tcpdump}.
     
     \begin{report}
     \item What is the value of the Time-to-Live (TTL) field for the IGMP messages?
@@ -364,7 +393,10 @@ telnet 128.238.66.100
     Login to the router.
     See if you can make a router interface (e.g.\ \textit{ethernet0}) join a multicast group of 224.0.0.2, using:
     \begin{lstlisting}[language={cisco}]
-Router(interface)# ip igmp join-group 224.0.0.2
+configure terminal
+    ip multicast-routing
+    interface f0/0
+        ip igmp join-group 224.0.0.2
     \end{lstlisting}
     
     \begin{report}
@@ -454,9 +486,9 @@ Router(interface)# ip igmp join-group 224.0.0.2
 
     Run \lstinline{tcpdump ip multicast} or \lstinline{wireshark} on all the hosts. 
 
-    Execute \lstinline{./netspy 224.111.111.111 1500} on \textit{h0}, \textit{h2}, \textit{h3}, \textit{h5}, and \textit{h6}.
+    Execute \lstinline{/home/netlab/code/netspy 224.111.111.111 1500} on \textit{h0}, \textit{h2}, \textit{h3}, \textit{h5}, and \textit{h6}.
 
-    Execute \lstinline{./netspyd 224.111.111.111 1500 16} on \textit{h4}.
+    Execute \lstinline{/home/netlab/code/netspyd 224.111.111.111 1500 16} on \textit{h4}.
     
     To generate multicast traffic, you can login (by \lstinline{telnet} or \lstinline{ssh}) to or logout of \textit{h4}.
     Each time when the login user set of \textit{h4} changes, \lstinline{netspyd} on \textit{h4} will send a multicast datagram to group 224.111.111.111, to report the change in its login users.
