chapter 2: fix your host issue

--- a/2 A single segment network/A single segment network.tex
+++ b/2 A single segment network/A single segment network.tex
@@ -81,7 +81,7 @@
 
     \begin{report}
     \item From the \lstinline{ping} output, is the 127.0.0.1 interface on?
-    Can you see any ICMP message sent from \textit{h0} in the \lstinline{tcpdump} output?
+    Can you see any ICMP message sent from your host in the \lstinline{tcpdump} output?
     Why?
     \end{report}
 
